fixed contact form bleed

--- a/src/ContactUs.css
+++ b/src/ContactUs.css
@@ -44,14 +44,7 @@ form {
 
 }
 
-.form-group{
-    background-color: black;
- 
-  
 
-
-
-}
 
 
 
